Fixed issue where table would overlap the navbar Added footer to inventory page

--- a/Software&Database/Software/VItemStyle.Css
+++ b/Software&Database/Software/VItemStyle.Css
@@ -94,7 +94,7 @@ color: #666;
 .VItems {
 
     margin-left: 220px; 
-    width:100%; 
+    width: calc(100%-220px); 
 
 table {
     position: relative;
